# HyperBox

./: .editorconfig  .gitignore  ADVANCED_OPERATIONS.md  ANALYSIS_SUMMARY.md  ANNOUNCEMENT.md  API_REFERENCE.md  BENCHMARK_PLAN.md  BETA_TESTERS.md  BUILD_GUIDE.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  Cargo.toml  D4_RELEASE_NOTES_GUIDE.md  D5_GITHUB_RELEASE_EXECUTION.md  D5_GITHUB_RELEASE_GUIDE.md  DAILY_STANDUP_TEMPLATE.md  DELIVERABLES_INDEX.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_FINALIZATION_REPORT.md  DOCUMENTATION_INDEX.md  Dockerfile  EXAMPLES.md  EXECUTIVE_SUMMARY.md  HyperBox-Evolution-MasterClass-Prompt.md  HyperBox-MasterClass-Prompt.md  INNOVATION_RESEARCH_INDEX.md  INNOVATION_RESEARCH_REPORT.md  INSTALLATION_GUIDE.md  MASTER_ACTION_PLAN.md  NEXT_STEPS_MASTER_ACTION_PLAN.md  P0_INTEGRATION_GUIDE.md  PERFORMANCE_TUNING.md  PHASE_C_PLAN.md  PHASE_C_SUMMARY.md  PHASE_D_PLAN.md  PHASE_E_ARCHITECTURE.md  PHASE_E_ASSIGNMENTS.md  PHASE_E_CHECKPOINTS.md  PHASE_E_DELIVERABLES.txt  PHASE_E_MERGE_PROTOCOL.md  PHASE_E_QUICK_START.md  (+21 more)
.github/: BETA_LAUNCH_README.md  BETA_PROGRAM_GUIDE.md  BETA_RECRUITMENT.md  DAILY_SOCIAL_MEDIA.md  FEEDBACK_COLLECTION.md  RECRUITMENT_TRACKER.md  STREAM3_STATUS_REPORT.md  WEEKLY_UPDATE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  QUESTION.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs  state.rs
app/src/components/: CreateContainerModal.tsx  Layout.tsx  UpdateChecker.tsx  index.ts
app/src/pages/: Containers.tsx  Dashboard.tsx  Images.tsx  Performance.test.tsx  Performance.tsx  Projects.tsx  Settings.tsx  Terminal.tsx  index.ts
app/src/stores/: containers.ts  index.ts  metrics.test.ts  metrics.ts  projects.ts  system.ts
app/src/test/: setup.ts
app/src/test/e2e/: containers.test.tsx  dashboard.test.tsx  images.test.tsx  projects.test.tsx  terminal.test.tsx
app/src/test/integration/: workflows.test.ts
app/src/test/mocks/: tauri-plugins.ts  tauri.ts
app/src/test/unit/: stores.test.ts
build-artifacts/v0.1.0/checksums/: SHA256SUMS
config/: hyperbox-config-templates.conf
crates/hyperbox-cli/: Cargo.toml
crates/hyperbox-cli/src/: client.rs  main.rs
crates/hyperbox-cli/src/commands/: compat.rs  completion.rs  container.rs  health.rs  image.rs  mod.rs  project.rs  system.rs
crates/hyperbox-core/: Cargo.toml
crates/hyperbox-core/benches/: runtime_benchmarks.rs
crates/hyperbox-core/src/: error.rs  lib.rs  types.rs
crates/hyperbox-core/src/isolation/: cgroups.rs  landlock.rs  mod.rs  namespaces.rs  seccomp.rs  security_stack.rs
crates/hyperbox-core/src/memory/: mod.rs  psi.rs
crates/hyperbox-core/src/network/: bridge.rs  cni.rs  mod.rs  ports.rs
crates/hyperbox-core/src/runtime/: crun.rs  docker.rs  mod.rs  registry.rs  traits.rs  wasm.rs  youki.rs
crates/hyperbox-core/src/storage/: composefs.rs  layers.rs  mod.rs  registry.rs
crates/hyperbox-core/tests/: integration_tests.rs
crates/hyperbox-daemon/: Cargo.toml
crates/hyperbox-daemon/src/: api.rs  config.rs  error.rs  grpc.rs  health.rs  ipc.rs  lifecycle.rs  main.rs  observability.rs  state.rs
crates/hyperbox-optimize/: Cargo.toml
crates/hyperbox-optimize/benches/: comprehensive_benchmarks.rs  optimize_benchmarks.rs
crates/hyperbox-optimize/src/: criu.rs  dedup.rs  erofs.rs  error.rs  lazy_load.rs  lib.rs  memory.rs  nydus.rs  predict.rs  prewarm.rs
crates/hyperbox-optimize/tests/: dedup_integration_tests.rs  memory_integration_tests.rs  memory_method_tests.rs
crates/hyperbox-project/: Cargo.toml
crates/hyperbox-project/src/: config.rs  detection.rs  devcontainer.rs  error.rs  lib.rs  manager.rs  orchestration.rs  ports.rs  resources.rs  watcher.rs
scripts/: build-release.ps1
tests/: Cargo.toml
tests/e2e/: container_lifecycle.rs  daemon_operations.rs  docker_compat.rs  mod.rs  performance.rs  windows_compat.rs
tests/integration/: container_scenarios.rs  image_pull.rs
