[workspace]
resolver = "2"
members = [
    "crates/hyperbox-core",
    "crates/hyperbox-project",
    "crates/hyperbox-optimize",
    "crates/hyperbox-cli",
    "crates/hyperbox-daemon",
    "app/src-tauri",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HyperBox Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamthegreatdestroyer/HyperBox"
description = "20x faster Docker Desktop replacement with project-centric isolation"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Container runtime
bollard = "0.16"
oci-spec = "0.6"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "1.0", features = ["full"] }
axum = "0.7"
tonic = "0.10"
prost = "0.12"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# File system & paths
tempfile = "3.9"
walkdir = "2.4"
notify = "6.1"
dirs = "5.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Compression
flate2 = "1.0"
tar = "0.4"
zstd = "0.13"

# Crypto/hashing
sha2 = "0.10"
hex = "0.4"

# Platform-specific
nix = { version = "0.27", features = ["fs", "mount", "sched", "signal", "user"] }

# Testing
mockall = "0.12"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.4"
criterion = "0.5"

# Internal crates
hyperbox-core = { path = "crates/hyperbox-core" }
hyperbox-project = { path = "crates/hyperbox-project" }
hyperbox-optimize = { path = "crates/hyperbox-optimize" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
inherits = "release"
debug = true
