[package]
name = "hyperbox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core container runtime abstraction for HyperBox"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bollard.workspace = true
oci-spec.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
tempfile.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
num_cpus.workspace = true
reqwest.workspace = true
tar.workspace = true
flate2.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
criterion = "0.5"

[[bench]]
name = "runtime_benchmarks"
harness = false

[features]
default = []
crun = []
youki = []
firecracker = []

[lints]
workspace = true
