[package]
name = "hyperbox-daemon"
version = "0.1.0"
edition = "2021"
description = "HyperBox background daemon service"
license = "MIT OR Apache-2.0"
authors = ["HyperBox Contributors"]

[[bin]]
name = "hyperboxd"
path = "src/main.rs"

[dependencies]
hyperbox-core = { path = "../hyperbox-core" }
hyperbox-project = { path = "../hyperbox-project" }
hyperbox-optimize = { path = "../hyperbox-optimize" }

# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-stream = "0.3"

# gRPC
tonic = "0.10"
prost = "0.12"

# HTTP/REST API
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["server"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration
config = "0.13"
toml = "0.8"
dirs = "5.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"

# System
sysinfo = "0.30"

# Process management
ctrlc = "3.4"

# Unix-only dependencies
[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"
nix = { version = "0.27", features = ["signal", "process", "fs"] }
daemonize = "0.5"

[build-dependencies]
tonic-build = "0.10"
