[package]
name = "hyperbox-project"
version = "0.1.0"
edition = "2021"
authors = ["HyperBox Team"]
description = "Project-centric isolation and management for HyperBox containers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamthegreatdestroyer/HyperBox"
keywords = ["containers", "docker", "project", "isolation"]
categories = ["development-tools", "virtualization"]

[dependencies]
hyperbox-core = { path = "../hyperbox-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Data structures
dashmap = { workspace = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { workspace = true }
directories = "5.0"
notify = { version = "6.1", features = ["serde"], optional = true }
walkdir = "2.4"
globset = "0.4"
num_cpus = "1.16"

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[features]
default = []
hot-reload = ["watch"]
watch = ["notify"]
